# crypto-ts-forecast

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
docs/source/: conf.py  index.rst
notebooks/: 01_test_data_ingestion.ipynb  02_test_data_processing.ipynb  03_test_model_training.ipynb  04_test_inference.ipynb  05_full_pipeline_test.ipynb
src/crypto_ts_forecast/: __init__.py  __main__.py  hooks.py  settings.py
src/crypto_ts_forecast/api/: __init__.py  app.py  main.py  schemas.py  services.py
src/crypto_ts_forecast/pipelines/data_ingestion/: __init__.py  nodes.py  pipeline.py
src/crypto_ts_forecast/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
src/crypto_ts_forecast/pipelines/inference/: __init__.py  nodes.py  pipeline.py
src/crypto_ts_forecast/pipelines/model_training/: __init__.py  nodes.py  pipeline.py
tests/: test_run.py
tests/pipelines/data_ingestion/: test_nodes.py  test_pipeline.py
tests/pipelines/data_processing/: test_nodes.py  test_pipeline.py
tests/pipelines/inference/: test_nodes.py  test_pipeline.py
tests/pipelines/model_training/: test_nodes.py  test_pipeline.py
